--- a/src/configs/settings.json
+++ b/src/configs/settings.json
@@ -1,8 +1,8 @@
 {
-  "token": "ODY5MTk3OTI0NzI5NDk5NjY4.YP6tpg.HNoeJTlTAYP6m0xFnY3xV0GTOOI",
+  "token": "ODY5MTk3OTI0NzI5NDk5NjY4.YP6tpg.tokeniyenilemistimmq",
   "prefix": [".","!","r!"],
   "guildID": "899273632436592701",
-  "mongoUrl": "mongodb+srv://Burness07:Burness07@cluster0.nubpc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+  "mongoUrl": "mongodb+srv://burayaya mongo gircen knk@cluster0.nubpc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
   "owners": ["612688335944679600","",""],
   "botDurum": "✬ Revulion Developed by OZİ",
   "botSes": "899273633103507489",
