--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "ark.db": "^2.6.1",
+    "axios": "^0.24.0",
     "canvas": "^2.8.0",
     "chartjs-node-canvas": "^3.2.0",
     "cron": "^1.8.2",
